HelloUltraviolet/Fixtures/RejectedSource/Expressions/ParsePlaceError/Expected.uv
//! Expected diagnostic metadata for the ParsePlaceError rejected-source specimen.

expectedDiagnostic("E-SRC-0520", "rule.16.Parse-Place-Err")
